# Payday

./: README.md  build-electron.js  build-tauri.js  build-windows.bat  capacitor.config.ts  check-project.js  electron-builder.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
electron/: main.js  package.json  preload.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/components/: BugReportDialog.tsx  ProtectedRoute.tsx
src/components/budget/: AddExpenseDialog.tsx  BudgetCategories.tsx  BudgetOverview.tsx  ExpenseChart.tsx  ExpensesList.tsx  ForecastChart.tsx  PlaceholderMessage.tsx  ProjectedSavings.tsx  SettingsDialog.tsx
src/components/events/: DeleteEventDialog.tsx
src/components/filters/: DateRangeSelector.tsx
src/components/layouts/: AppLayout.tsx  SideNavigation.tsx
src/components/profile/: EditProfileDialog.tsx
src/components/ui/: CategoryBadge.tsx  EventCard.tsx  LoadingScreen.tsx  StatCard.tsx  calendar.tsx  drawer.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/hooks/: use-theme.ts  use-user.ts
src/integrations/supabase/: client.ts  types.ts
src/lib/: supabase.ts
src/pages/: Analytics.tsx  Budget.tsx  Calendar.tsx  EventDetail.tsx  EventForm.tsx  Events.tsx  Index.tsx  Login.tsx  Profile.tsx  Register.tsx
src/services/: budgetService.ts  eventService.ts  expenseService.ts  index.ts
src/services/utils/: dataUtils.ts
src/types/: app.ts
supabase/: config.toml  schema.sql
